nav, header img, button done for desktop

--- a/less/home-page.less
+++ b/less/home-page.less
@@ -3,7 +3,13 @@
 .home {
 
   .intro {
-
+    .header-img-container {
+      img {
+        width: 100%;
+        height: auto;
+        border-radius: 5px
+      }
+    }
     h2 {
       padding: 15px;
     }
@@ -58,6 +64,7 @@
       }
 
       .btn {
+        .btn-custom(120px, 40px)
       }
     }
 
