--- a/less/mixins.less
+++ b/less/mixins.less
@@ -1,1 +1,19 @@
 // Mixins Here
+
+.flex-custom(@dir, @just, @align) {
+    display: flex;
+    flex-direction: @dir;
+    justify-content: @just;
+    align-items: @align;
+}
+
+.btn-custom(@width, @height){
+    border-radius: 5px;
+    background-color: @btn-bg-color;
+    color: white;
+    font-size: 2rem;
+    font-weight: bold;
+    width: @width ;
+    height: @height;
+    .flex-custom(row, center, center)
+}
