desktop, mobile layouts done

--- a/less/home-page.less
+++ b/less/home-page.less
@@ -74,7 +74,11 @@
       }
 
       .btn {
-        .btn-custom(120px, 40px)
+        .btn-custom(120px, 40px);
+        @media @mobile {
+          width: 100%;
+          padding: 15px;
+        }
       }
 
       @media @mobile {
