--- a/css/index.css
+++ b/css/index.css
@@ -181,6 +181,11 @@ nav .nav-links a {
   text-decoration: none;
   color: black;
 }
+@media (max-width: 500px) {
+  nav .nav-links {
+    width: 100%;
+  }
+}
 nav h1 {
   font-size: 4rem;
 }
@@ -267,6 +272,12 @@ footer {
   flex-direction: row;
   justify-content: center;
   align-items: center;
+}
+@media (max-width: 500px) {
+  .home .walk .walk-text .btn {
+    width: 100%;
+    padding: 15px;
+  }
 }
 @media (max-width: 500px) {
   .home .walk .walk-text {
