--- a/less/navigation.less
+++ b/less/navigation.less
@@ -14,6 +14,10 @@ nav {
       text-decoration: none;
       color: black;
     }
+
+    @media @mobile {
+      width: 100%;
+    }
   }// nav-links
 
   h1 {
