--- a/less/home-page.less
+++ b/less/home-page.less
@@ -76,14 +76,12 @@
       .btn {
         .btn-custom(120px, 40px);
         @media @mobile {
-          width: 100%;
-          padding: 15px;
+          .mobile-padding-width();
         }
       }
 
       @media @mobile {
-        width: 100%;
-        padding: 15px;
+        .mobile-padding-width();
       }
     }// walk-text
 
@@ -91,9 +89,8 @@
       width: 46%;
       margin-left: 4%;
       @media @mobile {
-        width: 100%;
-        padding: 15px;
-        margin: 0 auto;
+        .mobile-padding-width();
+        .center()
       }
       
       img {
