--- a/less/index.less
+++ b/less/index.less
@@ -3,7 +3,8 @@
 @import "mixins";
 @import "reset";
 @import "global";
-@import "navigation.less";
+@import "navigation";
 @import "footer";
 @import "home-page";
+@import "signup";
 
