--- a/css/index.css
+++ b/css/index.css
@@ -320,3 +320,62 @@ footer {
     padding: 0;
   }
 }
+.signup {
+  height: 300px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.signup form {
+  width: 500px;
+  height: 150px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+}
+.signup form .signup-field,
+.signup form .password-field {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  width: 300px;
+}
+@media (max-width: 500px) {
+  .signup form .signup-field,
+  .signup form .password-field {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+  }
+}
+.signup form .signup-field label,
+.signup form .password-field label {
+  font-size: 1.6rem;
+}
+.signup form .submit-field input {
+  border-radius: 5px;
+  background-color: #22283a;
+  color: white;
+  font-size: 2rem;
+  font-weight: bold;
+  width: 120px;
+  height: 40px;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+}
+.signup form .submit-field input:hover {
+  background: #81848e;
+  color: #23293b;
+  animation: point 0.5s forwards infinite ease-in normal;
+}
+@keyframes point {
+  50% {
+    transform: translateY(-10px);
+  }
+}
